add flex and flink, refactored to local env